--- a/PaginaPrincipal.html
+++ b/PaginaPrincipal.html
@@ -4,22 +4,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/pico-1.5.10/css/pico.min.css">
-    <link rel="stylesheet" href="app.css">
-
+    <link rel="stylesheet" href="styles.css">
     <title>AxieIntercambio</title>
   </head>
   <body>
     <main class="container">
-      <h1>AxieIntercambio</h1>
-      <h2>Bienvenido a AxieIntercambio lugar creado para el intercambio de activos del ecosistema de axie de forma segura y rapida</h2>
-      <h3>Crear Sala</h3>
-      <button>Crear</button>
-      <h3>Entrar En Sala</h3>
+      <h1 id="title" data-section="en" data-value="titulo">AxieIntercambio</h1>
+      <div id="flags" class="flags">
+          <div class="flags_item" data-language="en">
+            <img src="/icons/en.png"  width="35px">
+           </div>
+      </div>
+      <h2 id="description" data-section="en" data-value="descripcion">Bienvenido a AxieIntercambio lugar creado para el intercambio de activos del ecosistema de axie de forma segura y rapida</h2>
+      <button id="create-room-button" onclick="crearSala()" data-section="en" data-value="botom_Sala">Crear sala</button>
+      <h3 id="enter-room-button" data-section="en" data-value="Entrar">Entrar en Sala</h3>
       <form>
-         <label for="input-number">Introduce Codigo</label>
+         <label id="code-label" for="input-number" data-section="en" data-value="codigo">Introduce Codigo</label>
          <input type="text" id="input-number" name="input-number">
-         <button>Entrar</button>
+         <button data-section="en" data-value="entrar">Entrar</button>
        </form>       
     </main>
+    <script src="languages/lenguage.js"></script>
+    <script src="creacion de sala.js"></script>
   </body>
 </html>
