arreglo de nombres de archivos

--- a/sala.html.html
+++ b/sala.html.html
@@ -10,7 +10,7 @@
   <body>
     <main class="container">
      <h6> Codigo De Sala: <span id="room-number"></span></h6>
-     <h6>Direccion Ronin a Enviar:  <input type="text" id="input-number" name="input-number"></h4>
+     <h6>Direccion Ronin a Enviar:  <input type="text" id="input-number"></h4>
       <button class="enviar"Bottom" data-placement="bottom">Enviar</button> 
     </main>
     <script>
